fix: add overflow-x no body pra ver se player principal fica fixo na responsividade

--- a/atividade4/styles.css
+++ b/atividade4/styles.css
@@ -32,6 +32,7 @@
 
 body {
     display: grid;
+    overflow-x: hidden;
     height: 100vh;
     grid-template-areas:
         'header'
